// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disables save button on error 1`] = `
<Fragment>
  <div
    className="settings-definition-changes nowrap"
  >
    <Button
      className="spacer-right button-success"
      disabled={true}
      onClick={[Function]}
    >
      save
    </Button>
    <ResetButtonLink
      className="spacer-right"
      onClick={[Function]}
    >
      cancel
    </ResetButtonLink>
  </div>
</Fragment>
`;

exports[`displays cancel button when value changed and has error 1`] = `
<Fragment>
  <div
    className="settings-definition-changes nowrap"
  >
    <Button
      className="spacer-right button-success"
      disabled={true}
      onClick={[Function]}
    >
      save
    </Button>
    <ResetButtonLink
      className="spacer-right"
      onClick={[Function]}
    >
      cancel
    </ResetButtonLink>
  </div>
</Fragment>
`;

exports[`displays cancel button when value changed and no error 1`] = `
<Fragment>
  <div
    className="settings-definition-changes nowrap"
  >
    <Button
      className="spacer-right button-success"
      disabled={false}
      onClick={[Function]}
    >
      save
    </Button>
    <ResetButtonLink
      className="spacer-right"
      onClick={[Function]}
    >
      cancel
    </ResetButtonLink>
  </div>
</Fragment>
`;

exports[`displays default message when value is default 1`] = `
<Fragment>
  <div
    className="spacer-top note"
    style={
      Object {
        "lineHeight": "24px",
      }
    }
  >
    settings._default
  </div>
  <div
    className="settings-definition-changes nowrap"
  >
    <Button
      className="spacer-right"
      onClick={[Function]}
    >
      reset_verb
    </Button>
    <span
      className="note"
    >
      default
      : 
      settings.default.no_value
    </span>
  </div>
</Fragment>
`;

exports[`displays reset button when empty and not default 1`] = `
<Fragment>
  <div
    className="settings-definition-changes nowrap"
  >
    <Button
      className="spacer-right"
      onClick={[Function]}
    >
      reset_verb
    </Button>
    <span
      className="note"
    >
      default
      : 
      settings.default.no_value
    </span>
  </div>
</Fragment>
`;

exports[`displays save button when it can be saved 1`] = `
<Fragment>
  <div
    className="settings-definition-changes nowrap"
  >
    <Button
      className="spacer-right button-success"
      disabled={false}
      onClick={[Function]}
    >
      save
    </Button>
    <ResetButtonLink
      className="spacer-right"
      onClick={[Function]}
    >
      cancel
    </ResetButtonLink>
  </div>
</Fragment>
`;
